create style and ingredients display and user interface

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,13 +1,14 @@
-<%= render 'shared/page_title', title: 'All Recipes' %>
+<%= render 'shared/page_title', title: 'Recipes for: ' + @ingredient.name %>
 
 <ul class="nav nav-tabs">
   <li class="active"><%= link_to 'Recipes', recipes_path %></li>
   <li><%= link_to 'Chefs', chefs_path %></li>
 </ul>
+<br/>
 
-<%= will_paginate %>
+<%= will_paginate @recipes %>
 
-<% @recipes.each do |recipe| %>
+<% @ingredient.recipes.each do |recipe| %>
   <div class="row">
     <div class="col-md-2">
       <section class="chef_info center">
@@ -42,4 +43,4 @@
   <hr/>
 <% end %>
 
-<%= will_paginate %>
+<%= will_paginate @recipes %>
