--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,13 @@ body {
     margin-top: 20px;
 }
 
+.nav_ul_item {
+    padding-left: 25px;
+    float: left;
+    margin-top: 20px;
+    
+}
+
 .center {
     text-align: center;
 }
@@ -80,14 +87,15 @@ h2 {
     background-color: #EDEDED;
 }
 
-input, textarea, select, .uneditable-input {
+input[type='text'],input[type='password'],input[type='submit'],input[type='file'],
+textarea, select, .uneditable-input {
     border: 1px solid #D2D2D2;
     border-radius: 5px;
     width: 100%;
     margin-bottom: 15px;
 }
 
-input {
+input[type='text'],input[type='password'],input[type='submit'],input[type='file'] {
     /*height: auto !important;*/
     height: 32px;
 }
